{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Movement",
            "id": "2b795710-b287-4812-ae8b-43eb8f73991b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "598f10a3-a71c-4ba7-bccd-c75ad4f936ae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e33561b7-f02a-4f3c-99b3-bcb830ee5774",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6046c493-1af8-4773-b534-9edb26f34a04",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "db5831e6-3bad-49c1-9063-296195b540ed",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "89c756b9-e98f-4cd1-aa79-c1a0d2e5b28f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "612eafcd-da8d-4901-8258-b84b7f219246",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Attack",
            "id": "e779a209-6566-4beb-904b-aec78faf816d",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "cade776d-8858-4577-82ae-2aa0479b540e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": []
        },
        {
            "name": "Capacity",
            "id": "698439f3-8087-4c51-8d99-5115fa6e1253",
            "actions": [
                {
                    "name": "Capacity0",
                    "type": "Button",
                    "id": "3dd9532a-e0fc-4369-91a1-ada3d048afb9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Capacity1",
                    "type": "Button",
                    "id": "f0ec7891-2904-4b4a-b410-426f3efbc135",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Capacity2",
                    "type": "Button",
                    "id": "5149e613-eee6-4a62-8048-6e49faf4b9eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrowCapacity",
                    "type": "Button",
                    "id": "7c5a1cf3-1914-46b2-adff-2076fd1d6558",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RecalCapacity",
                    "type": "Button",
                    "id": "c127f5b8-4e5b-495a-a883-273461b1f71c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "51ee870a-f512-42bd-87a8-5e549a2d0c34",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Capacity0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0c5895f-7a86-4ec0-a37d-36df2dd2f8cd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Capacity1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9023c4ba-5907-4e90-8ea0-9568be0c0c2b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Capacity2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db69bc68-247f-481c-b069-1922a634307e",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowCapacity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "116dcc0c-0c51-42d8-824b-ffd1e02e4325",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RecalCapacity",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "b8a19349-aa66-4dd5-8530-973ba673d02f",
            "actions": [
                {
                    "name": "ActivateItem0",
                    "type": "Button",
                    "id": "505f98b0-c354-4398-a5f7-bba785fcb5f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateItem1",
                    "type": "Button",
                    "id": "a75d0200-c8f9-428a-b2b2-2dddebf835ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateItem2",
                    "type": "Button",
                    "id": "bb54462e-e0c5-4e4d-9d63-b4779d05adf8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowHideInventory",
                    "type": "Button",
                    "id": "9c1bae78-20ad-4650-8f18-6dca8a7e31ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowHideShop",
                    "type": "Button",
                    "id": "5da3651d-bad5-49a5-82ab-367f853b0c22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c49ed578-b0f1-47cb-af6d-aabccd690b2c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateItem0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8032dce0-063e-462a-8fbb-2e08c000b586",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateItem1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "219bc7f0-2ebd-4478-b92b-75586b1d83db",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateItem2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32496955-de5e-4a8e-8614-aee2153d3b44",
                    "path": "<Keyboard>/tab",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ShowHideInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55cf922e-a410-4a8a-9dbe-2f2e5a1bf70e",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowHideShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "745bed8a-cfc0-4f8a-a3ae-b70cfb354251",
            "actions": [
                {
                    "name": "LockToggle",
                    "type": "Button",
                    "id": "54a45e78-fe95-4f9d-bf31-b0edcdd20b4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d00ecd55-ab7c-4100-8d0c-99e5e99eedbb",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MoveMouse",
            "id": "a7ceacff-6044-40be-a466-6447c599e434",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "101c5f66-bd62-4b89-b5fd-0dcc2376f192",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ActiveButton",
                    "type": "Button",
                    "id": "423383cc-dfaf-401e-9009-8a937d79459c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "8fa0cad7-f2a2-4ac7-a45e-95bb84d930d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldRightClick",
                    "type": "Button",
                    "id": "7980cbac-c2d4-4a49-b223-eb0e8cc708ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9074bc1f-6077-45bd-89cd-62bd87652634",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0003a3b0-03b5-4a22-8db0-21af37bb3959",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActiveButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0208ece-a0ed-4522-bf94-6a5895d78804",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c74056ef-652c-4147-970e-358f50315a12",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}